networkpoliy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-mysql
spec:
  podSelector:
    matchLabels:
      tier: database        # Applies to MySQL pods
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tier: backend  # Only backend pods can access
      ports:
        - protocol: TCP
          port: 3306         # MySQL port
